Chapter12/Activity13.01/kubernetes/network_policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test-network-policy
  namespace: default
spec:
  podSelector: {}
  ingress:
    - {}
  egress:
    - {}
  policyTypes:
    - Ingress
    - Egress
#spec:
#  podSelector:
#    matchLabels:
#      app: kubernetes-test-ha-application-with-redis
#  policyTypes:
#    - Ingress
#    - Egress
#  ingress:
#    - from:
#        - ipBlock:
#            cidr: 10.0.0.0/16
#      ports:
#        - protocol: TCP
#          port: 8080
#  egress:
#    - to:
#        - podSelector:
#            matchLabels:
#              app: redis
#      ports:
#        - protocol: TCP
#          port: 6379
#    - to:
#        - ipBlock:
#            cidr: 0.0.0.0/0
#      ports:
#        - protocol: TCP
#          port: 8080
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test-network-policy-redis
  namespace: default
#spec:
#  podSelector:
#    matchLabels:
#      app: redis
#  policyTypes:
#    - Ingress
#  ingress:
#    - from:
#        - podSelector:
#            matchLabels:
#              app: kubernetes-test-ha-application-with-redis
#      ports:
#        - protocol: TCP
#          port: 6379
spec:
  podSelector: {}
  ingress:
    - {}
  egress:
    - {}
  policyTypes:
    - Ingress
    - Egress
